# NC

./: .env.example  .gitignore  .vercelignore  NCChartApp.tsx  NCWheel.legacy.tsx  NCWheel.tsx  README.md  SHEET_SETUP_README.txt  SUPABASE_SETUP.md  appscript_chart_svg_safe_update.txt  charts_headers_template.csv  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  sheet_template_charts.tsv  sheet_template_counselors.tsv  tailwind.config.js  vercel.json  vite.config.js
api/: index.py
backend/app/: __init__.py  astrology.py  case_validation.py  geo.py  main.py  schemas.py
backend/app/core/: config.py  database.py
backend/app/domain/: aspect_calculator.py  chart_calculator.py  house_assignment.py  points_calculator.py
backend/app/services/: arabic_parts_service.py  chart_service.py  chart_storage_service.py  (+7 more)
backend/tests/: test_arabic_parts_service.py  test_case_dataset.py  test_chart_service.py  test_chart_storage_service.py  test_chart_text_parser.py  test_database_schema_b2b.py  test_house_assignment.py  test_later_life_cycle_service.py  test_later_life_extract_route.py  test_profection_service.py  test_storage_audit_service.py  test_storage_dual_write_audit.py  test_storage_reconciliation_route.py  test_storage_reconciliation_service.py  test_validation.py
docs/: astro_cases.csv  korea_supplemental_cases.json  natalkr-copy-kit.md  natalkr-policy-checklist.md  natalkr-public-site-blueprint.md
scripts/: build-astro-dictionary.mjs
shared/: natal_chart_record.schema.json
src/: hexagram-64key.csv  index.css  main.jsx
(+8 files in other folders)
